styles/landing.scss
#landing {
  background-image: url("../imgs/landing-background.jpg"), url("../imgs/landing-background-low-res.jpg");
  background-size: cover, cover;
  background-repeat: no-repeat, no-repeat;
  justify-content: center;
  align-items: center;
  display: flex;
  width: 100%;
  height: 93.7vh;
  > div {
    justify-content: flex-end;
    align-items: stretch;
    display: flex;
    height: 45vh;
    width: 60vw;
    transform: translateX(-38%);
    background-color: rgba(1, 1, 26, 0.5);
    padding: 1%;
    border-radius: 15px;
    section {
      background-color: rgba(1, 1, 26, 0.349);
      display: flex;
      justify-content: flex-start;
      align-items: center;
      flex-direction: column;
      border: 5px solid rgb(15, 20, 24);
      box-shadow: 3px 4px rgba(0, 0, 0, 0.616);
      flex: 0 0 22%;
      margin-right: 3em;
      margin-top: 1.5em;
      margin-bottom: 1.5em;
      border-radius: 15px;
      span {
        color: white;
        padding: 10% 20% 20%;
        text-align: center;
      }
      #shield + span {
        padding-top: 15%;
      }
      #idea + span {
        padding: 20%;
      }
      #key,
      #shield,
      #idea {
        width: 50%;
        height: 50%;
        background-repeat: no-repeat;
        background-size: contain;
        margin-top: 2.5em;
      }
    }
  }
}

#key {
  background-image: url("../imgs/key.png");
}

#shield {
  background-image: url("../imgs/shield.png");
}

#idea {
  background-image: url("../imgs/idea.png");
}

// Slight adjustment on smaller screen/viewport sizes
@media only screen and (max-width: 1250px) {
  #landing > div {
    transform: translateX(-36%);
  }
}

@media only screen and (max-width: 1000px) {
  #landing > div {
    position: relative;
    justify-content: flex-end;
    transform: translateX(-20%);
  }
}

